--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -12,7 +12,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <title>Boostrap Starter Page</title>
+    <title>Coursera course: HTML, CSS, and Javascript for Web Developers</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
@@ -23,7 +23,7 @@
         <div class="navbar-header">
 
           <h1 class="navbar-brand navbar-left">
-            Food, LLC
+            <a href="http://apotyahaylo.github.io/coursera_css3/module3-solution/">Andriy Potyahaylo. Module 3.</a>
           </h1>
         
           <button id="menu-button" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -38,7 +38,7 @@
         <div class="visible-xs">
           <div id="collapsable-nav" class="collapse navbar-collapse">
             <ul class="nav nav-list ">
-            <li><a href="#section1">Coding Assignment</a></li>
+            <li><a href="#section1">Graded Assignment</a></li>
             <li><a href="#section2">Optional Assignment</a></li>
             <li><a href="#section3">Illustrations</a></li>
             </ul>
@@ -49,13 +49,13 @@
 
   <div class="containter-fluid">
 
-    <h2 id="top" class="text-center">Our Menu. Module 3</h1>
+    <h2 id="top" class="text-center">Module 3 Coding Assignment</h1>
   
     <div class="row">
       
       <div id="section1" class="col-xs-12 col-sm-6 col-md-4">
         <div class="section-content">
-          <h3 class="text-center">Coding Assignment</h3>
+          <h3 class="text-center">Graded Assignment</h3>
 
           <ol>
           <li>(If you haven’t already) Create a GitHub.com account and a repository that you will use for this class.</li>
@@ -103,7 +103,7 @@
           </ol>
 
           <p>Both the tablet view and the desktop view of what’s graded and required is the same. Here is the mockup illustration of the desktop &amp; tablet version of the site (only required graded parts shown):</p>
-          <div>End of Coding Assignment. <a href="#top">Back To Top</a></div>
+          <div>End of Graded Assignment. <a href="#top">Back To Top</a></div>
 
         </div>
       </div>
