--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -23,7 +23,7 @@
         <div class="navbar-header">
 
           <h1 class="navbar-brand navbar-left">
-            <a href="http://apotyahaylo.github.io/coursera_css3/module3-solution/">Andriy Potyahaylo. Module 3.</a>
+            <a href="http://apotyahaylo.github.io/coursera_css3/module3-solution/">Module 3.</a>
           </h1>
         
           <button id="menu-button" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -35,7 +35,7 @@
         
         </div>
 
-        <div class="visible-xs">
+        <div id="navmenu" class="visible-xs">
           <div id="collapsable-nav" class="collapse navbar-collapse">
             <ul class="nav nav-list ">
             <li><a href="#section1">Graded Assignment</a></li>
