--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -46,7 +46,7 @@
 
   <div id="main-content" class="container">
 
-    <h2 id="top" class="text-center">Module 3 Coding Assignment</h1>
+    <h2 id="top" class="text-center">Our Menu</h1>
   
     <div class="row">
       
